--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,55 @@
-.App {
-  text-align: center;
+.appContainer {
+	width: 90%;
+	margin: auto;
+	justify-content: center;
+	text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.list {
+	list-style: none;
+	font-size: 16px;
+	display: flex;
+	flex-wrap: wrap;
+	color: #fff;
+	text-align: left;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.list_item {
+	background: #333;
+	padding: 10px;
+	margin: 10px;
+	width: 45%;
+	padding-top: 5px;
+	padding-bottom: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.menubook_list_item {
+	padding-right: 10px;
+	padding-top: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+.list_item_booksTitle {
+	padding-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search_inputField {
+	padding: 10px;
+	outline: none;
+	border: none;
+	border-bottom: 2px solid #333;
+	font-size: 20px;
+}
+
+@media screen and (max-width: 768px) {
+	.body {
+		overflow-x: hidden;
+	}
+
+	.list {
+		margin-left: -1.5rem;
+	}
+
+	.list-item {
+		width: 100%;
+	}
 }
